--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,43 @@
             <li><a href="about.html">ABOUT</a></li>
         </ul>
     </nav>
+    <div class="central-box title-box">
+        <h1>Home</h1>
+    </div>
+    <div class="central-box">
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h2 class="card-title">Projects</h2>
+                        <a href="project.html">
+                            <img class="card-img-top" src="img/coffee-script/coffeecup.png" alt="project-link">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h2 class="card-title">Art Portfolio</h2>
+                        <a href="art.html">
+                            <img class="card-img-top" src="img/space_explorer/milkyway-end.png" alt="art-link">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card text-white bg-dark mb-3 text-center">
+                    <div class="card-body">
+                        <h2 class="card-title">About</h2>
+                        <a href="about.html">
+                            <img class="card-img-top" src="img/space_explorer/portal-end.png" alt="about-link">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
