--- a/apothecary-gallery.html
+++ b/apothecary-gallery.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Portfolio Beyond</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/beyond.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
+
 <body class="image-body space-body">
     <nav>
         <ul id="menu">
             <li><a href="index.html">HOME</a></li>
             <li><a href="project.html">PROJECTS</a>
                 <ul>
-                    <li><a href="space-explorer.html">Space Explorer</a></li></li>
-                    <li><a href="apothecary.html">Haunted Apothecary</a></li>
-                    <li><a href="coffeescript.html">Coffee Maker Script</a></li>
-                </ul>
+                    <li><a href="space-explorer.html">Space Explorer</a></li>
             </li>
-            <li><a href="art.html">PORTFOLIO</a>
+            <li><a href="apothecary.html">Haunted Apothecary</a></li>
+            <li><a href="coffeescript.html">Coffee Maker Script</a></li>
+        </ul>
+        </li>
+        <li><a href="art.html">PORTFOLIO</a>
             <ul>
                 <li><a href="space-explorer-gallery.html">Space Explorer</a></li>
                 <li><a class="active" href="apothecary-gallery.html">Haunted Apothecary</a></li>
                 <li><a href="other-art.html">Other Art</a></li>
-            </li>
-            </ul>
-            <li><a href="about.html">ABOUT</a></li>
+        </li>
+        </ul>
+        <li><a href="about.html">ABOUT</a></li>
         </ul>
     </nav>
     <div class="central-box title-box">
@@ -155,6 +158,7 @@
                 </div>
             </div>
         </div>
+        <!--
         <h2>Background</h2>
         <div class="card text-white bg-dark mb-3 text-center">
             <div class="card-body">
@@ -163,12 +167,14 @@
                     <img class="card-img-top" src="img/apothecary/background.png" alt="background">
                 </a>
             </div>
-        </div>
+        </div>-->
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
 
 <!--
