--- a/space-explorer.html
+++ b/space-explorer.html
@@ -29,7 +29,23 @@
             <li><a href="about.html">ABOUT</a></li>
         </ul>
     </nav>
-    <div class="central-box"><!--add id box for overview of space explorer--></div>
+    <div class="central-box title-box">
+        <h2>Space Explorer</h2>
+    </div>
+    <div class="central-box">
+        <p class="text-wrap" style="font-size: 150%;"><img src="img/space_explorer/rocket.png" alt="rocket" style="max-width: 500px; float: right;">
+            Space Explorer is a sidescroller version of the classic asteroids game implemented using HTML, CSS, and Javascript. I developed this game 
+            alongside fellow students at Whitworth University, Ethan Worth and Owen Foster, for our Internet Applications Development class. As a group, 
+            we went from knowing very little about web applications to developing this game in two weeks. <br><br>            
+            The starship has launched from a planet deep within a distant solar system with one mission: to get back to Earth with treasures, 
+            scientific discoveries, and research advancements. Unfortunately, there are obstacles, and to make it to the portal that takes the ship home,
+            these must be managed. Asteroids come hurtling through space, damaging the starship's shields. Fuel is limited, and every evasive maneuver drains it.
+            Managing these resources is crucial, or else mission failure is inevitable. <br><br>
+            See the game assets <a href="space-explorer-gallery.html">here</a>.
+        </p>
+        
+        <a class="btn btn-outline-light" style="margin: auto; font-size:150%;" href="game.html">Play the Game</a>
+    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
