--- a/other-art.html
+++ b/other-art.html
@@ -42,6 +42,26 @@
             </div>
         </div>
     </div>
+    <div class="central-box art-box">
+        <div class="card text-white bg-dark mb-3 text-center">
+            <div class="card-body">
+                <h6 class="card-title">Dark Clouds Wallpaper</h6>
+                <a href="img/art_portfolio/webpage-dark-clouds.png">
+                    <img class="card-img-top" src="img/art_portfolio/webpage-dark-clouds.png" alt="cloud">
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="central-box art-box">
+        <div class="card text-white bg-dark mb-3 text-center">
+            <div class="card-body">
+                <h6 class="card-title">Teal Clouds Wallpaper</h6>
+                <a href="img/art_portfolio/webpage-clouds.png">
+                    <img class="card-img-top" src="img/art_portfolio/webpage-clouds.png" alt="cloud">
+                </a>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
