--- a/apothecary.html
+++ b/apothecary.html
@@ -7,31 +7,13 @@
     <link rel="stylesheet" href="css/beyond.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script>$(function () { $("#navbar").load("nav.html"); });</script>
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="image-body space-body">
-    <nav>
-        <ul id="menu">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="project.html">PROJECTS</a>
-                <ul>
-                    <li><a href="space-explorer.html">Space Explorer</a></li>
-            </li>
-            <li><a class="active" href="apothecary.html">Haunted Apothecary</a></li>
-            <li><a href="coffeescript.html">Coffee Maker Script</a></li>
-        </ul>
-        </li>
-        <li><a href="art.html">PORTFOLIO</a>
-            <ul>
-                <li><a href="space-explorer-gallery.html">Space Explorer</a></li>
-                <li><a href="apothecary-gallery.html">Haunted Apothecary</a></li>
-                <li><a href="other-art.html">Other Art</a></li>
-        </li>
-        </ul>
-        <li><a href="about.html">ABOUT</a></li>
-        </ul>
-    </nav>
+    <div id="navbar"></div>
     <div class="central-box">
         <a href="https://github.com/eroberts22/apothecary">Java Dungeon Crawler - January 2021</a>
         <p>See the game assets <a href="apothecary-gallery.html">here</a>.</p>
