--- a/nav.html
+++ b/nav.html
@@ -1,22 +1,51 @@
-<link rel="stylesheet" href="css/beyond.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<nav role="navigation">
+    <div id="menuToggle">
+        <input type="checkbox"/>
+        <span></span>
+        <span></span>
+        <span></span>
+
+        <ul id="menu">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="project.html">PROJECTS</a>
+                <ul>
+                    <li><a href="space-explorer.html">Space Explorer</a></li></li>
+                    <li><a href="apothecary.html">Haunted Apothecary</a></li>
+                    <li><a href="coffeescript.html">Coffee Maker Script</a></li>
+                </ul>
+            </li>
+            <li><a href="art.html">PORTFOLIO</a>
+            <ul>
+                <li><a href="space-explorer-gallery.html">Space Explorer</a></li>
+                <li><a href="apothecary-gallery.html">Haunted Apothecary</a></li>
+                <li><a href="other-art.html">Other Art</a></li>
+            </li>
+            </ul>
+            <li><a href="about.html">ABOUT</a></li>
+        </ul>
+
+    </div>
+</nav>
+
+<!--
 <nav>
     <ul id="menu">
-        <li><a class="active" href="index.html">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="project.html">PROJECTS</a>
             <ul>
-                <li><a href="space-explorer.html">Space Explorer</a></li>
+                <li><a href="space-explorer.html">Space Explorer</a></li></li>
+                <li><a href="apothecary.html">Haunted Apothecary</a></li>
+                <li><a href="coffeescript.html">Coffee Maker Script</a></li>
+            </ul>
         </li>
-    </ul>
-    </li>
-    <li><a href="art.html">ART PORTFOLIO</a>
+        <li><a href="art.html">PORTFOLIO</a>
         <ul>
             <li><a href="space-explorer-gallery.html">Space Explorer</a></li>
-            <li><a href="apothecary-gallery.html">Apothecary</a></li>
+            <li><a href="apothecary-gallery.html">Haunted Apothecary</a></li>
             <li><a href="other-art.html">Other Art</a></li>
-    </li>
-    </ul>
-    <li><a href="about.html">ABOUT</a></li>
+        </li>
+        </ul>
+        <li><a href="about.html">ABOUT</a></li>
     </ul>
 </nav>
+-->
