--- a/project.html
+++ b/project.html
@@ -18,7 +18,7 @@
     <div class="central-box title-box">
         <h1>Projects</h1>
     </div>
-    <div class="central-box project-box">
+    <div class="central-box">
         <div class="row">
             <div class="col-sm-4">
                 <div class="card text-white bg-dark mb-3 text-center">
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </div>
-        <div class="central-box project-box">
+        <div class="central-box">
             <h2 style="text-align: center;">Other Projects</h2>
             <ul>
                 <!-- <li>Software Engineering Client Project - coming soon</li> -->
