--- a/space-explorer.html
+++ b/space-explorer.html
@@ -17,7 +17,7 @@
         <h1>Space Explorer</h1>
     </div>
     <div class="central-box">
-        <p class="text-wrap" style="font-size: 150%;"><img src="img/space_explorer/rocket.png" alt="rocket" style="max-width: 500px; float: right;">
+        <p><img src="img/space_explorer/rocket.png" alt="rocket">
             Space Explorer is a sidescroller version of the classic asteroids game implemented using HTML, CSS, and Javascript. I developed this game 
             alongside fellow students at Whitworth University, Ethan Worth and Owen Foster, for our Internet Applications Development class. As a group, 
             we went from knowing very little about web applications to developing this game in two weeks. <br><br>            
