--- a/project.html
+++ b/project.html
@@ -51,15 +51,13 @@
                 </div>
             </div>
         </div>
-        <div class="central-box">
+        <div class="central-box list-box">
             <h2 style="text-align: center;">Other Projects</h2>
             <ul>
                 <!-- <li>Software Engineering Client Project - coming soon</li> -->
                 <li><a href="https://github.com/eroberts22/portfoliobeyond">Portfolio Beyond Source Code</a></li>
-                <li><a href="https://lizroberts2000.wixsite.com/asteroids-3d" target="_blank">C++/OpenGL/GLSL 3D
-                        Asteroids - April 2021</a></li>
-                <li><a href="https://lizroberts2000.wixsite.com/garden-simulation" target="_blank">C++ Garden Simulation
-                        - April 2020</a></li>
+                <li><a href="https://lizroberts2000.wixsite.com/asteroids-3d" target="_blank">C++/OpenGL 3D Asteroids - April 2021</a></li>
+                <li><a href="https://lizroberts2000.wixsite.com/garden-simulation" target="_blank">C++ Garden Simulation - April 2020</a></li>
             </ul>
         </div>
     </div>
