--- a/art.html
+++ b/art.html
@@ -9,16 +9,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script>$(function () { $("#navbar").load("nav.html"); });</script>
     <script src="js/script.js" defer></script>
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="image-body space-body">
-    <div id="navbar"></div>
-    <div class="central-box title-box">
-        <h1>Art Portfolio</h1>
-    </div>
+    <div id="navbar-placeholder"></div>
     <div class="central-box">
         <!--<p>Original game assets and art</p>-->
         <div class="row">
@@ -60,65 +56,3 @@
 </body>
 
 </html>
-
-
-<!--<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <title>Portfolio Beyond</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="css/beyond.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script>$(function () { $("#navbar").load("nav.html"); });</script>
-    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
-</head>
-
-<body class="image-body space-body">
-    <div id="navbar"></div>
-    <div class="central-box title-box">
-        <h1>Art Portfolio</h1>
-    </div>
-    <div class="central-box">
-        <div class="row">
-            <div class="col-lg-4 col-sm-12 py-2">
-                <div class="card text-white bg-dark mb-3 text-center h-100 hoverable">
-                    <div class="card-body">
-                        <h2 class="card-title">Space Explorer</h2>
-                        <a href="space-explorer-gallery.html">
-                            <img class="card-img-top" src="img/space_explorer/rocket.png" alt="space-explorer">
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-12 py-2">
-                <div class="card text-white bg-dark mb-3 text-center h-100 hoverable">
-                    <div class="card-body">
-                        <h2 class="card-title">Haunted Apothecary</h2>
-                        <a href="apothecary-gallery.html">
-                            <img class="card-img-top" src="img/apothecary/jellyfish.png" alt="apothecary">
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-12 py-2">
-                <div class="card text-white bg-dark mb-3 text-center h-100 hoverable">
-                    <div class="card-body">
-                        <h2 class="card-title">Other Art</h2>
-                        <a href="other-art.html">
-                            <img class="card-img-top" src="img/space_explorer/portal-end.png" alt="ghost">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>-->
