--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-    <div class="logo"><a href="#">Portfolio Beyond.</a></div>
+    <div class="logo"><a href="index.html">Portfolio Beyond.</a></div>
     <a href="#" class="toggle-button">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -7,7 +7,7 @@
     </a>
     <div class="navbar-links">
         <ul>
-            <li><a class="active" href="index.html">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="project.html">PROJECTS</a></li>
             <li><a href="art.html">ART PORTFOLIO</a></li>
             <li><a href="about.html">ABOUT</a></li>
