--- a/space-explorer.html
+++ b/space-explorer.html
@@ -8,12 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script>$(function () { $("#navbar").load("nav.html"); });</script>
     <script src="js/script.js" defer></script>
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 <body class="image-body space-body">
-    <div id="navbar"></div>
+    <div id="navbar-placeholder"></div>
     <div class="central-box title-box">
         <h1>Space Explorer</h1>
     </div>
